--- a/MPI_Paralelo/Makefile
+++ b/MPI_Paralelo/Makefile
@@ -14,8 +14,8 @@ seq:
 run-seq: seq
   mpirun -np 1 -H hal02,hal03,hal04,hal05,hal06,hal07,hal08,hal09,hal10 ./seq 4
 worker:
-  mpicc -fopenmp ./spawn-worker.c -o spawn-worker
+  mpicc -fopenmp ./worker.c -o worker
 par:
-  mpicc  -fopenmp ./par.c -o par
+  mpicc  -fopenmp ./par2.c -o par2
 run-par: par
-  mpirun -np 4 -H hal02,hal03,hal04,hal05,hal06,hal07,hal08,hal09,hal10 --oversubscribe ./par 4
+  mpirun -np 4 -H hal02,hal03,hal04,hal05,hal06,hal07,hal08,hal09,hal10 --oversubscribe ./par2 4
